--- a/IntroToTensorFlow.ipynb
+++ b/IntroToTensorFlow.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction to Tensorflow"
+    "### Introduction to Tensorflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"node1_3:0\", shape=(), dtype=float32) Tensor(\"blablahhh_3:0\", shape=(), dtype=float32) Tensor(\"Const_3:0\", shape=(), dtype=float32)\n"
+      "Tensor(\"node1:0\", shape=(), dtype=float32) Tensor(\"blablahhh:0\", shape=(), dtype=float32) Tensor(\"Const:0\", shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node3: Tensor(\"Add_1:0\", shape=(), dtype=float32)\n",
+      "node3: Tensor(\"Add:0\", shape=(), dtype=float32)\n",
       "sess.run(node3): 7.0\n"
      ]
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +122,98 @@
    "source": [
     "print(sess.run(adder_node, {a: 3, b: 4.5}))\n",
     "print(sess.run(adder_node, {a: [1, 3], b: [2, 4]}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can make the computational graph more complex by adding another operation. For example,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_and_triple = adder_node * 3.\n",
+    "print(sess.run(add_and_triple, {a: 3, b: 4.5}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In machine learning we will typically want a model that can take arbitrary inputs, such as the one above. To make the model trainable, we need to be able to modify the graph to get new outputs with the same input. Variables allow us to add trainable parameters to a graph. They are constructed with a type and initial value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = tf.Variable([.3], dtype=tf.float32)\n",
+    "b = tf.Variable([-.3], dtype=tf.float32)\n",
+    "x = tf.placeholder(tf.float32)\n",
+    "linear_model = W*x + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Constants are initialized when you call tf.constant, and their value can never change. By contrast, variables are not initialized when you call tf.Variable. To initialize all the variables in a TensorFlow program, you must explicitly call a special operation as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "init is a handle to the TensorFlow sub-graph that initializes all the global variables. Until we call sess.run, the variables are uninitialized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since x is a placeholder, we can evaluate linear_model for **several values** of x simultaneously as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.30000001  0.60000002  0.90000004]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sess.run(linear_model, {x: [1, 2, 3, 4]}))"
    ]
   },
   {
