variables initialization and differences with constants

--- a/IntroToTensorFlow.ipynb
+++ b/IntroToTensorFlow.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = tf.Variable([.3], dtype=tf.float32)\n",
+    "W = tf.Variable([.3], dtype=tf.float32) # Variables can be initialized - not to be confused with constants though -\n",
     "b = tf.Variable([-.3], dtype=tf.float32)\n",
     "x = tf.placeholder(tf.float32)\n",
     "linear_model = W*x + b"
@@ -177,12 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "init = tf.global_variables_initializer()\n",
-    "sess.run(init)"
+    "init = tf.global_variables_initializer() # this was not needed before, since we did not have constants but variables -\n",
+    "sess.run(init) # initializes the variables"
    ]
   },
   {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +209,66 @@
    ],
    "source": [
     "print(sess.run(linear_model, {x: [1, 2, 3, 4]}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We've created a model, but we don't know how good it is yet. To evaluate the model on training data, we need a y placeholder to provide the desired values, and we need to write a loss function.\n",
+    "\n",
+    "A loss function measures how far apart the current model is from the provided data. We'll use a standard loss model for linear regression, which sums the squares of the deltas between the current model and the provided data. linear_model - y creates a vector where each element is the corresponding example's error delta. We call tf.square to square that error. Then, we sum all the squared errors to create a single scalar that abstracts the error of all examples using tf.reduce_sum:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.66\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = tf.placeholder(tf.float32)\n",
+    "squared_deltas = tf.square(linear_model - y)\n",
+    "loss = tf.reduce_sum(squared_deltas)\n",
+    "print(sess.run(loss, {x: [1, 2, 3, 4], y: [0, -1, -2, -3]}))\n",
+    "\n",
+    "# if y matches exactly the results of linear_model calculated above - then loss function is at 0\n",
+    "print(sess.run(loss, {x: [1, 2, 3, 4], y: [0, 0.3, 0.6, 0.90000004]}))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could improve this manually by reassigning the values of W and b to the perfect values of -1 and 1. A variable is initialized to the value provided to tf.Variable but can be changed using operations like tf.assign. For example, W=-1 and b=1 are the optimal parameters for our model. We can change W and b accordingly:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "fixW = tf.assign(W, [-1.])\n",
+    "fixb = tf.assign(b, [1.])\n",
+    "sess.run([fixW, fixb]) # initializes the fixW and fixb variables\n",
+    "print(sess.run(loss, {x: [1, 2, 3, 4], y: [0, -1, -2, -3]})) # 0 - boom !"
    ]
   },
   {
