custom model with estimator

--- a/IntroToTensorFlow.ipynb
+++ b/IntroToTensorFlow.ipynb
@@ -934,6 +934,555 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A custom model\n",
+    "\n",
+    "tf.estimator does not lock you into its predefined models. Suppose we wanted to create a custom model that is not built into TensorFlow. We can still retain the high level abstraction of data set, feeding, training, etc. of tf.estimator. For illustration, we will show how to implement our own equivalent model to LinearRegressor using our knowledge of the lower level TensorFlow API.\n",
+    "\n",
+    "To define a custom model that works with tf.estimator, we need to use tf.estimator.Estimator. tf.estimator.LinearRegressor is actually a sub-class of tf.estimator.Estimator. Instead of sub-classing Estimator, we simply provide Estimator a function model_fn that tells tf.estimator how it can evaluate predictions, training steps, and loss. The code is as follows:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using default config.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using default config.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using config: {'_session_config': None, '_keep_checkpoint_every_n_hours': 10000, '_save_checkpoints_secs': 600, '_task_type': 'worker', '_tf_random_seed': None, '_is_chief': True, '_model_dir': '/var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h', '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1816051588>, '_save_checkpoints_steps': None, '_keep_checkpoint_max': 5, '_log_step_count_steps': 100, '_task_id': 0, '_master': '', '_num_worker_replicas': 1, '_save_summary_steps': 100, '_num_ps_replicas': 0, '_service': None}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using config: {'_session_config': None, '_keep_checkpoint_every_n_hours': 10000, '_save_checkpoints_secs': 600, '_task_type': 'worker', '_tf_random_seed': None, '_is_chief': True, '_model_dir': '/var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h', '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1816051588>, '_save_checkpoints_steps': None, '_keep_checkpoint_max': 5, '_log_step_count_steps': 100, '_task_id': 0, '_master': '', '_num_worker_replicas': 1, '_save_summary_steps': 100, '_num_ps_replicas': 0, '_service': None}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Create CheckpointSaverHook.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Create CheckpointSaverHook.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 1, loss = 30.5524254169\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 1, loss = 30.5524254169\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 457.679\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 457.679\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 101, loss = 0.0286388629915 (0.225 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 101, loss = 0.0286388629915 (0.225 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 623.616\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 623.616\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 201, loss = 0.00281724686753 (0.158 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 201, loss = 0.00281724686753 (0.158 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 790.702\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 790.702\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 301, loss = 0.000391909060709 (0.126 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 301, loss = 0.000391909060709 (0.126 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 757.72\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 757.72\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 401, loss = 1.45368333625e-05 (0.133 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 401, loss = 1.45368333625e-05 (0.133 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 549.895\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 549.895\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 501, loss = 2.12750982694e-06 (0.182 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 501, loss = 2.12750982694e-06 (0.182 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 608.528\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 608.528\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 601, loss = 4.20975609715e-08 (0.163 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 601, loss = 4.20975609715e-08 (0.163 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 801.166\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 801.166\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 701, loss = 5.94610650462e-09 (0.126 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 701, loss = 5.94610650462e-09 (0.126 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 793.525\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 793.525\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 801, loss = 1.3313248838e-09 (0.125 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 801, loss = 1.3313248838e-09 (0.125 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 824.607\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:global_step/sec: 824.607\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 901, loss = 9.02983152714e-11 (0.121 sec)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:step = 901, loss = 9.02983152714e-11 (0.121 sec)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving checkpoints for 1000 into /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Loss for final step: 9.35332707674e-12.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Loss for final step: 9.35332707674e-12.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Starting evaluation at 2018-01-29-06:00:48\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Starting evaluation at 2018-01-29-06:00:48\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt-1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt-1000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Finished evaluation at 2018-01-29-06:00:49\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Finished evaluation at 2018-01-29-06:00:49\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 8.08242e-12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 8.08242e-12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Starting evaluation at 2018-01-29-06:00:50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Starting evaluation at 2018-01-29-06:00:50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt-1000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /var/folders/9c/whwt0lds4pzcwpmd_82qyy0h0000gn/T/tmpephwax_h/model.ckpt-1000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Finished evaluation at 2018-01-29-06:00:51\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Finished evaluation at 2018-01-29-06:00:51\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.0101004\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Saving dict for global step 1000: global_step = 1000, loss = 0.0101004\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train metrics: {'global_step': 1000, 'loss': 8.0824184e-12}\n",
+      "eval metrics: {'global_step': 1000, 'loss': 0.010100441}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# Declare list of features, we only have one real-valued feature\n",
+    "def model_fn(features, labels, mode):\n",
+    "  # Build a linear model and predict values\n",
+    "  W = tf.get_variable(\"W\", [1], dtype=tf.float64)\n",
+    "  b = tf.get_variable(\"b\", [1], dtype=tf.float64)\n",
+    "  y = W*features['x'] + b\n",
+    "  # Loss sub-graph\n",
+    "  loss = tf.reduce_sum(tf.square(y - labels))\n",
+    "  # Training sub-graph\n",
+    "  global_step = tf.train.get_global_step()\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(0.01)\n",
+    "  train = tf.group(optimizer.minimize(loss),\n",
+    "                   tf.assign_add(global_step, 1))\n",
+    "  # EstimatorSpec connects subgraphs we built to the\n",
+    "  # appropriate functionality.\n",
+    "  return tf.estimator.EstimatorSpec(\n",
+    "      mode=mode,\n",
+    "      predictions=y,\n",
+    "      loss=loss,\n",
+    "      train_op=train)\n",
+    "\n",
+    "estimator = tf.estimator.Estimator(model_fn=model_fn)\n",
+    "# define our data sets\n",
+    "x_train = np.array([1., 2., 3., 4.])\n",
+    "y_train = np.array([0., -1., -2., -3.])\n",
+    "x_eval = np.array([2., 5., 8., 1.])\n",
+    "y_eval = np.array([-1.01, -4.1, -7., 0.])\n",
+    "input_fn = tf.estimator.inputs.numpy_input_fn(\n",
+    "    {\"x\": x_train}, y_train, batch_size=4, num_epochs=None, shuffle=True)\n",
+    "train_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
+    "    {\"x\": x_train}, y_train, batch_size=4, num_epochs=1000, shuffle=False)\n",
+    "eval_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
+    "    {\"x\": x_eval}, y_eval, batch_size=4, num_epochs=1000, shuffle=False)\n",
+    "\n",
+    "# train\n",
+    "estimator.train(input_fn=input_fn, steps=1000)\n",
+    "# Here we evaluate how well our model did.\n",
+    "train_metrics = estimator.evaluate(input_fn=train_input_fn)\n",
+    "eval_metrics = estimator.evaluate(input_fn=eval_input_fn)\n",
+    "print(\"train metrics: %r\"% train_metrics)\n",
+    "print(\"eval metrics: %r\"% eval_metrics)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
